roles/setup_monitoring/templates/grafana_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 32000
  selector:
    app.kubernetes.io/name: grafana
